--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
-        <lib.dir>${basedir}/lib</lib.dir>
+        <lib.dir>${basedir}/lib_8_0_0_4</lib.dir>
         <target.dir>${project.build.directory}/WMQMonitor</target.dir>
     </properties>
     <dependencies>
@@ -50,12 +50,19 @@
             <scope>system</scope>
             <systemPath>${lib.dir}/com.ibm.mq.headers.jar</systemPath>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>com.ibm</groupId>
             <artifactId>connector</artifactId>
             <version>7.5.0.2</version>
             <scope>system</scope>
             <systemPath>${lib.dir}/connector.jar</systemPath>
+        </dependency>-->
+        <dependency>
+            <groupId>com.ibm</groupId>
+            <artifactId>connector</artifactId>
+            <version>7.5.0.2</version>
+            <scope>system</scope>
+            <systemPath>${lib.dir}/com.ibm.mq.allclient.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.appdynamics</groupId>
