--- a/src/test/resources/conf/config.yaml
+++ b/src/test/resources/conf/config.yaml
@@ -77,6 +77,10 @@ mqMertics:
           ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACF_Q_TIME_INDICATOR"
           ibmCommand: "MQCMD_INQUIRE_Q_STATUS"
 
+        - UncommittedMsgs: "UncommittedMsgs"
+          ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACF_UNCOMMITTED_MSGS"
+          ibmCommand: "MQCMD_INQUIRE_Q_STATUS"
+
         - HighQDepth: "HighQDepth"
           ibmConstant: "com.ibm.mq.constants.CMQC.MQIA_HIGH_Q_DEPTH"
           ibmCommand: "MQCMD_RESET_Q_STATS"
