--- a/src/test/resources/conf/config.yaml
+++ b/src/test/resources/conf/config.yaml
@@ -7,6 +7,10 @@ numberOfThreads: 10
 #This will create it in specific Tier. Replace <TIER_NAME>. Please make sure to have a trailing |
 metricPrefix: "Server|Component:<TIER_NAME>|Custom Metrics|WebsphereMQ|"
 
+#This is the timeout on queue metrics threads.Default value is 20 seconds. No need to change the default
+#Unless you know what you are doing.
+queueMetricsCollectionTimeoutInSeconds: 20
+
 queueManagers:
   - host: "192.168.57.104"
     port: 1424
