--- a/src/test/resources/conf/configClientNoHost.yaml
+++ b/src/test/resources/conf/configClientNoHost.yaml
@@ -1,11 +1,9 @@
 ### ANY CHANGES TO THIS FILE DOES NOT REQUIRE A RESTART ###
 numberOfThreads: 10
 
-#This will create this metric in all the tiers, under this path. Please make sure to have a trailing |
-#metricPrefix: Custom Metrics|WebsphereMQ|
-
-#This will create it in specific Tier. Replace <TIER_NAME>. Please make sure to have a trailing |
-metricPrefix: "Server|Component:<TIER_NAME>|Custom Metrics|WebsphereMQ|"
+#This will create it in specific Tier aka Component. Replace <COMPONENT_ID>. Please make sure to have a trailing |.
+#To find out the COMPONENT_ID, please see the screen shot here https://docs.appdynamics.com/display/PRO42/Build+a+Monitoring+Extension+Using+Java
+metricPrefix: "Server|Component:<COMPONENT_ID>|Custom Metrics|WebsphereMQ|"
 
 
 #This is the timeout on queue metrics threads.Default value is 20 seconds.
