--- a/src/test/resources/conf/configBindingNoQm.yaml
+++ b/src/test/resources/conf/configBindingNoQm.yaml
@@ -7,6 +7,10 @@ metricPrefix: "Server|Component:<TIER_NAME>|Custom Metrics|WebsphereMQ|"
 #This is the timeout on queue metrics threads.Default value is 20 seconds.
 queueMetricsCollectionTimeoutInSeconds: 20
 
+#Uncomment only if encryption of passwords is wanted
+#encryptionKey: ""
+
+
 queueManagers:
   - host: "localhost"
     port: 1414
