--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.appdynamics.wmqmonitor</groupId>
     <artifactId>websphere-mq-monitoring-extension</artifactId>
-    <version>5.2.0</version>
+    <version>6.0.0</version>
     <packaging>jar</packaging>
     <name>websphere-mq-monitoring-extension</name>
     <url>http://maven.apache.org</url>
@@ -13,7 +13,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
         <lib.dir>${basedir}/lib</lib.dir>
-        <ibm.mq.lib.version>7.5.2</ibm.mq.lib.version>
+        <ibm.mq.lib.version>7.5.0.2</ibm.mq.lib.version>
         <target.dir>${project.build.directory}/WMQMonitor</target.dir>
     </properties>
     <dependencies>
@@ -53,18 +53,25 @@
         </dependency>
         <dependency>
             <groupId>com.ibm</groupId>
-            <artifactId>connector</artifactId>
-            <version>7.5.0.2</version>
+            <artifactId>com.ibm.mq.commonservices</artifactId>
             <scope>system</scope>
-            <systemPath>${lib.dir}/connector.jar</systemPath>
+            <version>${ibm.mq.lib.version}</version>
+            <systemPath>${lib.dir}/com.ibm.mq.commonservices.jar</systemPath>
         </dependency>
-        <!--<dependency>
+       <!-- <dependency>
             <groupId>com.ibm</groupId>
             <artifactId>connector</artifactId>
+            <version>${ibm.mq.lib.version}</version>
+            <scope>system</scope>
+            <systemPath>${lib.dir}/connector.jar</systemPath>
+        </dependency>-->
+        <dependency>
+            <groupId>com.ibm</groupId>
+            <artifactId>com.ibm.mq.allclient</artifactId>
             <scope>system</scope>
             <version>${ibm.mq.lib.version}</version>
             <systemPath>${lib.dir}/com.ibm.mq.allclient.jar</systemPath>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>com.appdynamics</groupId>
             <artifactId>appd-exts-commons</artifactId>
